test: resource repo impl 수정 (getFirst)